[project]
name = "xahaud-scripts"
version = "0.1.0"
description = "Scripts for working in xahaud repo"
authors = [{ name = "Nicholas Dudfield", email = "ndudfield@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.1.0",
    "requests>=2.32.3",
    "pyperclip>=1.9.0",
    "cmakelang>=0.6.13",
    "rich>=13.0.0",
    "websockets>=12.0",
    "xrpl-py>=2.0.0",
]

[project.scripts]
get-job = "xahaud_scripts.get_job:main"
run-tests = "xahaud_scripts.run_tests:main"
build-jshooks-header = "xahaud_scripts.build_jshooks_header:main"
format-changed = "xahaud_scripts.format_changed:main"
testnet = "xahaud_scripts.testnet.cli:main"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-env>=1.1.3",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
    "types-requests>=2.31.0",
    "pre-commit>=2.17.0",
    "typing-extensions>=4.12.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xahaud_scripts"]

[tool.ruff]
line-length = 88
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["xahaud_scripts"]

[tool.pytest.ini_options]
env = ["TESTING123=1"]
addopts = "-v --cov=xahaud_scripts --disable-warnings"
pythonpath = ["src"]

[tool.mypy]
mypy_path = "src"
packages = ["xahaud_scripts"]
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
